zmiana systemu poruszania