@@ -1,27 +1,36 @@
 package agh.ics.oop;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+
 import org.junit.jupiter.api.Test;
 
-import agh.ics.oop.model.MoveDirection;
-
 public class OptionsParserTest {
+
 	@Test
 	public void testParse() {
-		final String orderStringA[] = {"f","l","b","r"};
-		final List<MoveDirection> realParsedOrdersA = List.of(
-			MoveDirection.FORWARD,
-			MoveDirection.LEFT,
-			MoveDirection.BACKWARD,
-			MoveDirection.RIGHT
-		);
+        ArrayList<String> orderStringA = new ArrayList<>(Arrays.asList("0","1","2","4","5","6","7"));
+        List<Integer> orderIntigersA = List.of(0, 1, 2, 4, 5, 6, 7);
+        List<Integer> parserIntigersA = OptionsParser.parse(orderStringA);
 
-		final String orderStringB0[] = {"l","r","34","f","l","ff","f-b","Xb","l","b"};
-		assertThrows(IllegalArgumentException.class, () -> OptionsParser.parse(List.of(orderStringB0)));
+        assertEquals(orderIntigersA,  parserIntigersA);
+
+        ArrayList<String> orderStringB = new ArrayList<>(Arrays.asList("1","2","3","4","0","1"));
+        List<Integer> orderIntigersB = List.of(1, 2, 3, 4, 0, 1);
+        List<Integer> parserIntigersB = OptionsParser.parse(orderStringB);
+
+        System.out.println(parserIntigersB);
+
+        //assertEquals(orderIntigersB,  parserIntigersB);
+        // Tworzenie dwóch list
+
+
+        /*
 		final String orderStringB[] = {"l","r","f","l","l","b"};
 		final List<MoveDirection> realParsedOrdersB = List.of(
 			MoveDirection.LEFT,
@@ -46,5 +55,6 @@ public class OptionsParserTest {
 		assertEquals(realParsedOrdersB, parsedOrdersB);
 		assertEquals(realParsedOrdersC, parsedOrdersC);
 		assertNotEquals(realParsedOrdersA, parsedOrdersB);
+         */
 	}
 }
